fix color contrast

--- a/src/common/components/cards/card-kebab-menu-button.scss
+++ b/src/common/components/cards/card-kebab-menu-button.scss
@@ -43,6 +43,9 @@ button.kebab-menu-button {
     background: transparent;
 
     svg {
+        @media screen and (-ms-high-contrast: active) {
+            fill: inherit !important;
+        }
         stroke: $primary-text;
     }
 
